# fiddle-tone-picker

./: .gitignore  README.md
backend/: index.py  pyproject.toml  requirements.txt
frontend/: index.html
frontend/src/: App.css  App.jsx
frontend/src/components/: TextEditor.jsx  ThemeToggle.jsx  ToneMatrix.jsx  TonePicker.jsx
frontend/src/services/: api.js
